Android: Disable "android" style since it crashes

... and it looks disproportionate when it does work.

BUG:455662